--- a/src/app/user/profile/profile.component.html
+++ b/src/app/user/profile/profile.component.html
@@ -7,76 +7,50 @@
     <form [formGroup]="userForm">
       <ng-template matStepLabel>Account Information</ng-template>
       <div class="stepContent">
-        <div fxLayout="row" fxLayout.lt-sm="column" [formGroup]="userForm.get('name')"
-          fxLayoutGap="10px">
-          <mat-form-field fxFlex="40%">
-            <input matInput placeholder="First Name" aria-label="First Name"
-              formControlName="first" />
-            <mat-error *ngIf="
-                userForm
-                  .get('name')
-                  .get('first')
-                  .hasError('required')
-              ">
+        <div *ngIf="false" fxLayout="row" fxLayout.lt-sm="column"
+          [formGroup]="userForm.get('name')" fxLayoutGap="10px">
+          <mat-form-field appearance="outline" fxFlex="40%">
+            <mat-label>First Name</mat-label>
+            <input matInput aria-label="First Name" formControlName="first" />
+            <mat-error *ngIf="userForm.get('name').get('first').hasError('required')">
               First Name is required
             </mat-error>
-            <mat-error *ngIf="
-                userForm
-                  .get('name')
-                  .get('first')
-                  .hasError('minLength')
-              ">
+            <mat-error *ngIf="userForm.get('name').get('first').hasError('minLength')">
               Must be at least 2 characters
             </mat-error>
-            <mat-error *ngIf="
-                userForm
-                  .get('name')
-                  .get('first')
-                  .hasError('maxLength')
-              ">
+            <mat-error *ngIf="userForm.get('name').get('first').hasError('maxLength')">
               Can't exceed 50 characters
             </mat-error>
           </mat-form-field>
-          <mat-form-field fxFlex="20%">
-            <input matInput placeholder="MI" aria-label="Middle Initial"
-              formControlName="middle" />
+          <mat-form-field appearance="outline" fxFlex="20%">
+            <mat-label>MI</mat-label>
+            <input matInput aria-label="Middle Initial" formControlName="middle" />
             <mat-error *ngIf="userForm.get('name').get('middle').invalid">
               Only inital
             </mat-error>
           </mat-form-field>
-          <mat-form-field fxFlex="40%">
-            <input matInput placeholder="Last Name" aria-label="Last Name"
-              formControlName="last" />
-            <mat-error *ngIf="
-                userForm
-                  .get('name')
-                  .get('last')
-                  .hasError('required')
-              ">
+          <mat-form-field appearance="outline" fxFlex="40%">
+            <mat-label>Last Name</mat-label>
+            <input matInput aria-label="Last Name" formControlName="last" />
+            <mat-error *ngIf="userForm.get('name').get('last').hasError('required')">
               Last Name is required
             </mat-error>
-            <mat-error *ngIf="
-                userForm
-                  .get('name')
-                  .get('last')
-                  .hasError('minLength')
-              ">
+            <mat-error *ngIf="userForm.get('name').get('last').hasError('minLength')">
               Must be at least 2 characters
             </mat-error>
-            <mat-error *ngIf="
-                userForm
-                  .get('name')
-                  .get('last')
-                  .hasError('maxLength')
-              ">
+            <mat-error *ngIf="userForm.get('name').get('last').hasError('maxLength')">
               Can't exceed 50 characters
             </mat-error>
           </mat-form-field>
         </div>
+        <app-name-input [initialData]="name$ | async"
+          (formReady)="userForm.setControl('name', $event)">
+        </app-name-input>
         <div fxLayout="row" fxLayout.lt-sm="column" fxLayoutGap="10px">
-          <mat-form-field fxFlex="50%">
-            <input matInput placeholder="Date of Birth" aria-label="Date of Birth"
-              formControlName="dateOfBirth" [matDatepicker]="dateOfBirthPicker" />
+          <mat-form-field appearance="outline" fxFlex="50%">
+            <mat-label>Date of Birth</mat-label>
+            <input matInput aria-label="Date of Birth" formControlName="dateOfBirth"
+              [matDatepicker]="dateOfBirthPicker" />
             <mat-hint *ngIf="userForm.get('dateOfBirth').touched">
               {{ this.age }} year(s) old
             </mat-hint>
@@ -87,9 +61,9 @@
               Date must be with the last 100 years
             </mat-error>
           </mat-form-field>
-          <mat-form-field fxFlex="50%">
-            <input matInput placeholder="E-mail" aria-label="E-mail"
-              formControlName="email" />
+          <mat-form-field appearance="outline" fxFlex="50%">
+            <mat-label>E-mail</mat-label>
+            <input matInput aria-label="E-mail" formControlName="email" />
             <mat-hint>Only your manager can update your e-mail.</mat-hint>
             <mat-error *ngIf="userForm.get('email').invalid">
               A valid E-mail is required
@@ -100,16 +74,16 @@
           <div fxFlex>
             <mat-label class="mat-body-1">Role</mat-label>
             <mat-radio-group formControlName="role">
-              <mat-radio-button style="margin-right: 10px;" value="this.Role.None">
+              <mat-radio-button style="margin-right: 10px;" [value]="Role.None">
                 <span class="mat-body-1">None</span>
               </mat-radio-button>
-              <mat-radio-button style="margin-right: 10px;" value="this.Role.Cashier">
+              <mat-radio-button style="margin-right: 10px;" [value]="Role.Cashier">
                 <span class="mat-body-1">Cashier</span>
               </mat-radio-button>
-              <mat-radio-button style="margin-right: 10px;" value="this.Role.Clerk">
+              <mat-radio-button style="margin-right: 10px;" [value]="Role.Clerk">
                 <span class="mat-body-1">Clerk</span>
               </mat-radio-button>
-              <mat-radio-button style="margin-right: 10px;" value="this.Role.Manager">
+              <mat-radio-button style="margin-right: 10px;" [value]="Role.Manager">
                 <span class="mat-body-1">Manager</span>
               </mat-radio-button>
             </mat-radio-group>
@@ -134,108 +108,65 @@
       <div class="stepContent">
         <div fxLayout="row" fxLayout.lt-sm="column" [formGroup]="userForm.get('address')"
           fxLayoutGap="10px">
-          <mat-form-field fxFlex>
-            <input matInput placeholder="Address Line 1" aria-label="Address Line 1"
-              formControlName="line1" />
-            <mat-error *ngIf="
-                userForm
-                  .get('address')
-                  .get('line1')
-                  .hasError('required')
-              ">
+          <mat-form-field appearance="outline" fxFlex>
+            <mat-label>Address Line 1</mat-label>
+            <input matInput aria-label="Address Line 1" formControlName="line1" />
+            <mat-error *ngIf=" userForm.get('address').get('line1').hasError('required')">
               Line 1 is required
             </mat-error>
-            <mat-error *ngIf="
-                userForm
-                  .get('address')
-                  .get('line1')
-                  .hasError('minLength')
-              ">
+            <mat-error *ngIf="userForm.get('address').get('line1').hasError('minLength')">
               Must be at least 2 characters
             </mat-error>
-            <mat-error *ngIf="
-                userForm
-                  .get('address')
-                  .get('line1')
-                  .hasError('maxLength')
-              ">
+            <mat-error *ngIf="userForm.get('address').get('line1').hasError('maxLength')">
               Can't exceed 50 characters
             </mat-error>
           </mat-form-field>
         </div>
         <div fxLayout="row" fxLayout.lt-sm="column" [formGroup]="userForm.get('address')"
           fxLayoutGap="10px">
-          <mat-form-field fxFlex>
-            <input matInput placeholder="Address Line 2" aria-label="Address Line 2"
-              formControlName="line2" />
+          <mat-form-field appearance="outline" fxFlex>
+            <mat-label>Line 2</mat-label>
+            <input matInput aria-label="Address Line 2" formControlName="line2" />
             <mat-hint>Optional</mat-hint>
-            <mat-error *ngIf="
-                userForm
-                  .get('address')
-                  .get('line2')
-                  .hasError('minLength')
-              ">
+            <mat-error *ngIf="userForm.get('address').get('line2').hasError('minLength')">
               Must be at least 2 characters
             </mat-error>
-            <mat-error *ngIf="
-                userForm
-                  .get('address')
-                  .get('line2')
-                  .hasError('maxLength')
-              ">
+            <mat-error *ngIf="userForm.get('address').get('line2').hasError('maxLength')">
               Can't exceed 50 characters
             </mat-error>
           </mat-form-field>
         </div>
         <div fxLayout="row" fxLayout.lt-sm="column" [formGroup]="userForm.get('address')"
           fxLayoutGap="10px">
-          <mat-form-field fxFlex="40%">
-            <input matInput placeholder="City" aria-label="City" formControlName="city" />
-            <mat-error *ngIf="
-                userForm
-                  .get('address')
-                  .get('city')
-                  .hasError('required')
-              ">
+          <mat-form-field appearance="outline" fxFlex="40%">
+            <mat-label>City</mat-label>
+            <input matInput aria-label="City" formControlName="city" />
+            <mat-error *ngIf="userForm.get('address').get('city').hasError('required')">
               City is required
             </mat-error>
-            <mat-error *ngIf="
-                userForm
-                  .get('address')
-                  .get('city')
-                  .hasError('minLength')
-              ">
+            <mat-error *ngIf="userForm.get('address').get('city').hasError('minLength')">
               Must be at least 2 characters
             </mat-error>
-            <mat-error *ngIf="
-                userForm
-                  .get('address')
-                  .get('city')
-                  .hasError('maxLength')
-              ">
+            <mat-error *ngIf="userForm.get('address').get('city').hasError('maxLength')">
               Can't exceed 50 characters
             </mat-error>
           </mat-form-field>
-          <mat-form-field fxFlex="30%">
-            <input type="text" placeholder="State" aria-label="State" matInput
-              formControlName="state" [matAutocomplete]="stateAuto" />
+          <mat-form-field appearance="outline" fxFlex="30%">
+            <mat-label>State</mat-label>
+            <input type="text" aria-label="State" matInput formControlName="state"
+              [matAutocomplete]="stateAuto" />
             <mat-autocomplete #stateAuto="matAutocomplete">
-              <mat-option *ngFor="let state of (states | async)" [value]="state.name">
+              <mat-option *ngFor="let state of (states$ | async)" [value]="state.name">
                 {{ state.name }}
               </mat-option>
             </mat-autocomplete>
-            <mat-error *ngIf="
-                userForm
-                  .get('address')
-                  .get('state')
-                  .hasError('required')
-              ">
+            <mat-error *ngIf="userForm.get('address').get('state').hasError('required')">
               State is required
             </mat-error>
           </mat-form-field>
-          <mat-form-field fxFlex="30%">
-            <input matInput placeholder="Zip Code" aria-label="Zip Code"
-              formControlName="zip" />
+          <mat-form-field appearance="outline" fxFlex="30%">
+            <mat-label>Zip Code</mat-label>
+            <input matInput aria-label="Zip Code" formControlName="zip" />
             <mat-error *ngIf="userForm.get('address').get('zip').invalid">
               A valid Zip Code is required
             </mat-error>
@@ -243,24 +174,27 @@
         </div>
         <div fxLayout="row" fxLayout.lt-sm="column">
           <mat-list formArrayName="phones">
-            <h2 mat-subheader>Phone Number(s)</h2>
-            <button mat-button (click)="this.addPhone()">
-              <mat-icon>add</mat-icon>
-              Add Phone
-            </button>
-            <mat-list-item
+            <h2 mat-subheader>Phone Number(s)
+              <button mat-button (click)="this.addPhone()">
+                <mat-icon>add</mat-icon>
+                Add Phone
+              </button>
+            </h2>
+            <mat-list-item style="margin-top: 36px;"
               *ngFor="let position of this.phonesArray.controls; let i = index"
               [formGroupName]="i">
-              <mat-form-field fxFlex="100px">
-                <mat-select placeholder="Type" formControlName="type">
+              <mat-form-field appearance="outline" fxFlex="100px">
+                <mat-label>Type</mat-label>
+                <mat-select formControlName="type">
                   <mat-option *ngFor="let type of this.PhoneTypes" [value]="type">
                     {{ type }}
                   </mat-option>
                 </mat-select>
               </mat-form-field>
-              <mat-form-field fxFlex fxFlexOffset="10px">
-                <input matInput type="text" placeholder="Number"
-                  formControlName="number" />
+              <mat-form-field appearance="outline" fxFlex fxFlexOffset="10px">
+                <mat-label>Number</mat-label>
+                <input matInput type="text" formControlName="number" mask="(000) 000-0000"
+                  prefix="+1" />
                 <mat-error *ngIf="this.phonesArray.controls[i].invalid">
                   A valid phone number is required
                 </mat-error>
@@ -286,7 +220,7 @@
       <ng-template matStepLabel>Review</ng-template>
       <div class="stepContent">
         Review and update your user profile.
-        <app-view-user [user]="this.userForm.value"></app-view-user>
+        <app-view-user [user]="userForm.value"></app-view-user>
       </div>
       <div fxLayout="row" class="margin-top">
         <button mat-button matStepperPrevious color="accent">Back</button>
