--- a/src/app/user/profile/profile.component.html
+++ b/src/app/user/profile/profile.component.html
@@ -2,63 +2,72 @@
   <h5>User Profile</h5>
 </mat-toolbar>
 
-<div *ngIf="userForm">
+<div *ngIf="formGroup">
   <mat-horizontal-stepper #stepper="matHorizontalStepper">
-    <mat-step [stepControl]="userForm">
-      <form [formGroup]="userForm">
+    <mat-step [stepControl]="formGroup">
+      <form [formGroup]="formGroup">
         <ng-template matStepLabel>Account Information</ng-template>
         <div class="stepContent">
-          <div *ngIf="false" fxLayout="row" fxLayout.lt-sm="column"
-            [formGroup]="userForm.get('name')" fxLayoutGap="10px">
-            <mat-form-field appearance="outline" fxFlex="40%">
-              <mat-label>First Name</mat-label>
-              <input matInput aria-label="First Name" formControlName="first" />
-              <mat-error *ngIf="userForm.get('name').get('first').hasError('required')">
-                First Name is required
-              </mat-error>
-              <mat-error *ngIf="userForm.get('name').get('first').hasError('minLength')">
-                Must be at least 2 characters
-              </mat-error>
-              <mat-error *ngIf="userForm.get('name').get('first').hasError('maxLength')">
-                Can't exceed 50 characters
-              </mat-error>
-            </mat-form-field>
-            <mat-form-field appearance="outline" fxFlex="20%">
-              <mat-label>MI</mat-label>
-              <input matInput aria-label="Middle Initial" formControlName="middle" />
-              <mat-error *ngIf="userForm.get('name').get('middle').invalid">
-                Only inital
-              </mat-error>
-            </mat-form-field>
-            <mat-form-field appearance="outline" fxFlex="40%">
-              <mat-label>Last Name</mat-label>
-              <input matInput aria-label="Last Name" formControlName="last" />
-              <mat-error *ngIf="userForm.get('name').get('last').hasError('required')">
-                Last Name is required
-              </mat-error>
-              <mat-error *ngIf="userForm.get('name').get('last').hasError('minLength')">
-                Must be at least 2 characters
-              </mat-error>
-              <mat-error *ngIf="userForm.get('name').get('last').hasError('maxLength')">
-                Can't exceed 50 characters
-              </mat-error>
-            </mat-form-field>
+          <div *ngIf="useAppNameInputComponent; else localFormImplementation">
+            <app-name-input [initialData]="nameInitialData$ | async"
+              (formReady)="registerForm('name', $event)">
+            </app-name-input>
           </div>
-          <app-name-input [initialData]="name$ | async"
-            (formReady)="userForm.setControl('name', $event)">
-          </app-name-input>
+          <ng-template #localFormImplementation>
+            <div fxLayout="row" fxLayout.lt-sm="column"
+              [formGroup]="formGroup.get('name')" fxLayoutGap="10px">
+              <mat-form-field appearance="outline" fxFlex="40%">
+                <mat-label>First Name</mat-label>
+                <input matInput aria-label="First Name" formControlName="first" />
+                <mat-error
+                  *ngIf="formGroup.get('name').get('first').hasError('required')">
+                  First Name is required
+                </mat-error>
+                <mat-error
+                  *ngIf="formGroup.get('name').get('first').hasError('minLength')">
+                  Must be at least 2 characters
+                </mat-error>
+                <mat-error
+                  *ngIf="formGroup.get('name').get('first').hasError('maxLength')">
+                  Can't exceed 50 characters
+                </mat-error>
+              </mat-form-field>
+              <mat-form-field appearance="outline" fxFlex="20%">
+                <mat-label>MI</mat-label>
+                <input matInput aria-label="Middle Initial" formControlName="middle" />
+                <mat-error *ngIf="formGroup.get('name').get('middle').invalid">
+                  Only inital
+                </mat-error>
+              </mat-form-field>
+              <mat-form-field appearance="outline" fxFlex="40%">
+                <mat-label>Last Name</mat-label>
+                <input matInput aria-label="Last Name" formControlName="last" />
+                <mat-error *ngIf="formGroup.get('name').get('last').hasError('required')">
+                  Last Name is required
+                </mat-error>
+                <mat-error
+                  *ngIf="formGroup.get('name').get('last').hasError('minLength')">
+                  Must be at least 2 characters
+                </mat-error>
+                <mat-error
+                  *ngIf="formGroup.get('name').get('last').hasError('maxLength')">
+                  Can't exceed 50 characters
+                </mat-error>
+              </mat-form-field>
+            </div>
+          </ng-template>
           <div fxLayout="row" fxLayout.lt-sm="column" fxLayoutGap="10px">
             <mat-form-field appearance="outline" fxFlex="50%">
               <mat-label>Date of Birth</mat-label>
               <input matInput aria-label="Date of Birth" formControlName="dateOfBirth"
                 [matDatepicker]="dateOfBirthPicker" />
-              <mat-hint *ngIf="userForm.get('dateOfBirth').touched">
+              <mat-hint *ngIf="formGroup.get('dateOfBirth').touched">
                 {{ this.age }} year(s) old
               </mat-hint>
               <mat-datepicker-toggle matSuffix [for]="dateOfBirthPicker">
               </mat-datepicker-toggle>
               <mat-datepicker #dateOfBirthPicker></mat-datepicker>
-              <mat-error *ngIf="userForm.get('dateOfBirth').invalid">
+              <mat-error *ngIf="formGroup.get('dateOfBirth').invalid">
                 Date must be with the last 100 years
               </mat-error>
             </mat-form-field>
@@ -66,7 +75,7 @@
               <mat-label>E-mail</mat-label>
               <input matInput aria-label="E-mail" formControlName="email" />
               <mat-hint>Only your manager can update your e-mail.</mat-hint>
-              <mat-error *ngIf="userForm.get('email').invalid">
+              <mat-error *ngIf="formGroup.get('email').invalid">
                 A valid E-mail is required
               </mat-error>
             </mat-form-field>
@@ -90,7 +99,7 @@
                 </mat-radio-button>
               </mat-radio-group>
               <mat-error *ngIf="
-          userForm.get('role').hasError('required') && userForm.get('role').touched
+          formGroup.get('role').hasError('required') && formGroup.get('role').touched
         ">
                 <span class="mat-caption">Role is required</span>
               </mat-error>
@@ -100,63 +109,66 @@
         <div fxLayout="row" class="margin-top">
           <div class="flex-spacer"></div>
           <div *ngIf="userError" class="mat-caption error">{{ userError }}</div>
+          <button mat-button (click)="simulateLazyLoadedInitData()">Lazy Load
+            Name</button>
           <button mat-raised-button matStepperNext color="accent">Next</button>
         </div>
       </form>
     </mat-step>
-    <mat-step [stepControl]="userForm">
-      <form [formGroup]="userForm">
+    <mat-step [stepControl]="formGroup">
+      <form [formGroup]="formGroup">
         <ng-template matStepLabel>Contact Information</ng-template>
         <div class="stepContent">
           <div fxLayout="row" fxLayout.lt-sm="column"
-            [formGroup]="userForm.get('address')" fxLayoutGap="10px">
+            [formGroup]="formGroup.get('address')" fxLayoutGap="10px">
             <mat-form-field appearance="outline" fxFlex>
               <mat-label>Address Line 1</mat-label>
               <input matInput aria-label="Address Line 1" formControlName="line1" />
               <mat-error
-                *ngIf=" userForm.get('address').get('line1').hasError('required')">
+                *ngIf=" formGroup.get('address').get('line1').hasError('required')">
                 Line 1 is required
               </mat-error>
               <mat-error
-                *ngIf="userForm.get('address').get('line1').hasError('minLength')">
+                *ngIf="formGroup.get('address').get('line1').hasError('minLength')">
                 Must be at least 2 characters
               </mat-error>
               <mat-error
-                *ngIf="userForm.get('address').get('line1').hasError('maxLength')">
+                *ngIf="formGroup.get('address').get('line1').hasError('maxLength')">
                 Can't exceed 50 characters
               </mat-error>
             </mat-form-field>
           </div>
           <div fxLayout="row" fxLayout.lt-sm="column"
-            [formGroup]="userForm.get('address')" fxLayoutGap="10px">
+            [formGroup]="formGroup.get('address')" fxLayoutGap="10px">
             <mat-form-field appearance="outline" fxFlex>
               <mat-label>Line 2</mat-label>
               <input matInput aria-label="Address Line 2" formControlName="line2" />
               <mat-hint>Optional</mat-hint>
               <mat-error
-                *ngIf="userForm.get('address').get('line2').hasError('minLength')">
+                *ngIf="formGroup.get('address').get('line2').hasError('minLength')">
                 Must be at least 2 characters
               </mat-error>
               <mat-error
-                *ngIf="userForm.get('address').get('line2').hasError('maxLength')">
+                *ngIf="formGroup.get('address').get('line2').hasError('maxLength')">
                 Can't exceed 50 characters
               </mat-error>
             </mat-form-field>
           </div>
           <div fxLayout="row" fxLayout.lt-sm="column"
-            [formGroup]="userForm.get('address')" fxLayoutGap="10px">
+            [formGroup]="formGroup.get('address')" fxLayoutGap="10px">
             <mat-form-field appearance="outline" fxFlex="40%">
               <mat-label>City</mat-label>
               <input matInput aria-label="City" formControlName="city" />
-              <mat-error *ngIf="userForm.get('address').get('city').hasError('required')">
+              <mat-error
+                *ngIf="formGroup.get('address').get('city').hasError('required')">
                 City is required
               </mat-error>
               <mat-error
-                *ngIf="userForm.get('address').get('city').hasError('minLength')">
+                *ngIf="formGroup.get('address').get('city').hasError('minLength')">
                 Must be at least 2 characters
               </mat-error>
               <mat-error
-                *ngIf="userForm.get('address').get('city').hasError('maxLength')">
+                *ngIf="formGroup.get('address').get('city').hasError('maxLength')">
                 Can't exceed 50 characters
               </mat-error>
             </mat-form-field>
@@ -170,14 +182,14 @@
                 </mat-option>
               </mat-autocomplete>
               <mat-error
-                *ngIf="userForm.get('address').get('state').hasError('required')">
+                *ngIf="formGroup.get('address').get('state').hasError('required')">
                 State is required
               </mat-error>
             </mat-form-field>
             <mat-form-field appearance="outline" fxFlex="30%">
               <mat-label>Zip Code</mat-label>
               <input matInput aria-label="Zip Code" formControlName="zip" />
-              <mat-error *ngIf="userForm.get('address').get('zip').invalid">
+              <mat-error *ngIf="formGroup.get('address').get('zip').invalid">
                 A valid Zip Code is required
               </mat-error>
             </mat-form-field>
@@ -218,27 +230,27 @@
           </div>
         </div>
         <div fxLayout="row" class="margin-top">
-          <button mat-button matStepperPrevious color="accent">Back</button>
+          <button mat-button matStepperPrevious>Back</button>
           <div class="flex-spacer"></div>
           <div *ngIf="userError" class="mat-caption error">{{ userError }}</div>
           <button mat-raised-button matStepperNext color="accent">Next</button>
         </div>
       </form>
     </mat-step>
-    <mat-step [stepControl]="userForm">
-      <form [formGroup]="userForm" (ngSubmit)="save(userForm)">
+    <mat-step [stepControl]="formGroup">
+      <form [formGroup]="formGroup" (ngSubmit)="save(formGroup)">
         <ng-template matStepLabel>Review</ng-template>
         <div class="stepContent">
           Review and update your user profile.
-          <app-view-user [user]="userForm.value"></app-view-user>
+          <app-view-user [user]="formGroup.value"></app-view-user>
         </div>
         <div fxLayout="row" class="margin-top">
-          <button mat-button matStepperPrevious color="accent">Back</button>
+          <button mat-button matStepperPrevious>Back</button>
           <div class="flex-spacer"></div>
           <div *ngIf="userError" class="mat-caption error">{{ userError }}</div>
           <button mat-button color="warn" (click)="stepper.reset()">Reset</button>
           <button mat-raised-button matStepperNext color="primary" type="submit"
-            [disabled]="this.userForm.invalid">
+            [disabled]="this.formGroup.invalid">
             Update
           </button>
         </div>
