--- a/src/app/manager/user-table/user-table.component.html
+++ b/src/app/manager/user-table/user-table.component.html
@@ -24,41 +24,38 @@
       {{ errorText }}
     </div>
   </div>
-  <mat-table [dataSource]="dataSource" matSort>
+  <table mat-table class="full-width" [dataSource]="items" matSort matSortActive="name"
+    matSortDirection="asc" matSortDisableClear>
     <ng-container matColumnDef="name">
-      <mat-header-cell *matHeaderCellDef mat-sort-header> Name </mat-header-cell>
-      <mat-cell *matCellDef="let row">
-        {{ row.name.first }} {{ row.name.last }}
-      </mat-cell>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
+      <td mat-cell *matCellDef="let row">
+        {{ row.fullName }}
+      </td>
     </ng-container>
     <ng-container matColumnDef="email">
-      <mat-header-cell *matHeaderCellDef mat-sort-header> E-mail </mat-header-cell>
-      <mat-cell *matCellDef="let row"> {{ row.email }} </mat-cell>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> E-mail </th>
+      <td mat-cell *matCellDef="let row"> {{ row.email }} </td>
     </ng-container>
     <ng-container matColumnDef="role">
-      <mat-header-cell *matHeaderCellDef mat-sort-header> Role </mat-header-cell>
-      <mat-cell *matCellDef="let row"> {{ row.role }} </mat-cell>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Role </th>
+      <td mat-cell *matCellDef="let row"> {{ row.role }} </td>
     </ng-container>
-    <ng-container matColumnDef="status">
-      <mat-header-cell *matHeaderCellDef mat-sort-header> Status </mat-header-cell>
-      <mat-cell *matCellDef="let row"> {{ row.status }} </mat-cell>
-    </ng-container>
-    <ng-container matColumnDef="id">
-      <mat-header-cell *matHeaderCellDef fxLayoutAlign="end center">View Details
-      </mat-header-cell>
-      <mat-cell *matCellDef="let row" fxLayoutAlign="end center"
-        style="margin-right: 8px">
+    <ng-container matColumnDef="_id">
+      <th mat-header-cell *matHeaderCellDef>View Details
+      </th>
+      <td mat-cell *matCellDef="let row" style="margin-right: 8px">
         <a mat-button mat-icon-button [routerLink]="[
             '/manager/users',
-            { outlets: { detail: ['user', { userId: row.id }] } }
+            { outlets: { detail: ['user', { userId: row._id }] } }
           ]" skipLocationChange>
           <mat-icon>visibility</mat-icon>
         </a>
-      </mat-cell>
+      </td>
     </ng-container>
-    <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-    <mat-row *matRowDef="let row; columns: displayedColumns"> </mat-row>
-  </mat-table>
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns"> </tr>
+  </table>
 
-  <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
+  <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" [length]="resultsLength">
+  </mat-paginator>
 </div>
