--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -59,8 +59,8 @@
               Fake Login Info
             </mat-panel-title>
           </mat-expansion-panel-header>
-          <mat-grid-list cols="2" rowHeight="48px" role="list">
-            <mat-grid-tile [colspan]="2" role="listitem" style="background: pink">Use
+          <mat-grid-list cols="3" rowHeight="48px" role="list">
+            <mat-grid-tile [colspan]="3" role="listitem" style="background: pink">Use
               any
               8 character string as
               password
@@ -71,6 +71,8 @@
             <mat-grid-tile>
               <mat-grid-tile-header>E-mail</mat-grid-tile-header>
             </mat-grid-tile>
+            <mat-grid-tile>
+            </mat-grid-tile>
             <div *ngFor="let role of roles; odd as oddRow">
               <mat-grid-tile role="listitem" [style.background]="oddRow ? 'lightGray': 'white'">
                 {{role}}
@@ -80,6 +82,10 @@
                   Any @test.com email
                 </div>
                 <ng-template #otherRoles>{{role.toLowerCase()}}@test.com</ng-template>
+              </mat-grid-tile>
+              <mat-grid-tile>
+                <button mat-button
+                  (click)="this.loginForm.patchValue({ email: role.toLowerCase() + '@test.com', password: 'whatever' })">Fill</button>
               </mat-grid-tile>
             </div>
           </mat-grid-list>
