--- a/src/app/manager/user-table/user-table.component.html
+++ b/src/app/manager/user-table/user-table.component.html
@@ -24,8 +24,8 @@
       {{ errorText }}
     </div>
   </div>
-  <table mat-table class="full-width" [dataSource]="items" matSort matSortActive="name"
-    matSortDirection="asc" matSortDisableClear>
+  <table mat-table class="full-width" [dataSource]="items$ | async" matSort
+    matSortActive="name" matSortDirection="asc" matSortDisableClear>
     <ng-container matColumnDef="name">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
       <td mat-cell *matCellDef="let row">
