--- a/projects/ch7/src/lemonmart-theme.scss
+++ b/projects/ch7/src/lemonmart-theme.scss
@@ -11,16 +11,20 @@
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
-$ch7-primary: mat-palette($mat-indigo);
-$ch7-accent: mat-palette($mat-pink, A200, A100, A400);
+$lemon-mart-primary: mat-palette($mat-green, 800);
+$lemon-mart-accent: mat-palette($mat-lime, A400);
 
 // The warn palette is optional (defaults to red).
-$ch7-warn: mat-palette($mat-red);
+$lemon-mart-warn: mat-palette($mat-red);
 
 // Create the theme object (a Sass map containing all of the palettes).
-$ch7-theme: mat-light-theme($ch7-primary, $ch7-accent, $ch7-warn);
+$lemon-mart-theme: mat-light-theme(
+  $lemon-mart-primary,
+  $lemon-mart-accent,
+  $lemon-mart-warn
+);
 
 // Include theme styles for core and each component used in your app.
 // Alternatively, you can import and @include the theme mixins for each component
 // that you are using.
-@include angular-material-theme($ch7-theme);
+@include angular-material-theme($lemon-mart-theme);
