--- a/projects/ch7/src/app/pos/pos/pos.component.html
+++ b/projects/ch7/src/app/pos/pos/pos.component.html
@@ -1,1 +1,4 @@
-<p>pos works!</p>
+<p>
+  <img
+    src="https://user-images.githubusercontent.com/822159/36186684-9f05fef8-110e-11e8-991f-fae6ca60fe5d.png" />
+</p>
