--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -12,10 +12,10 @@
           <mat-form-field fxFlex>
             <input matInput placeholder="E-mail" aria-label="E-mail"
               formControlName="email" />
-            <mat-error *ngIf="loginForm.get('email').hasError('required')">
+            <mat-error *ngIf="loginForm.get('email')?.hasError('required')">
               E-mail is required
             </mat-error>
-            <mat-error *ngIf="loginForm.get('email').hasError('email')">
+            <mat-error *ngIf="loginForm.get('email')?.hasError('email')">
               E-mail is not valid
             </mat-error>
           </mat-form-field>
@@ -26,13 +26,13 @@
             <input matInput placeholder="Password" aria-label="Password" type="password"
               formControlName="password" />
             <mat-hint>Minimum 8 characters</mat-hint>
-            <mat-error *ngIf="loginForm.get('password').hasError('required')">
+            <mat-error *ngIf="loginForm.get('password')?.hasError('required')">
               Password is required
             </mat-error>
-            <mat-error *ngIf="loginForm.get('password').hasError('minlength')">
+            <mat-error *ngIf="loginForm.get('password')?.hasError('minlength')">
               Password is at least 8 characters long
             </mat-error>
-            <mat-error *ngIf="loginForm.get('password').hasError('maxlength')">
+            <mat-error *ngIf="loginForm.get('password')?.hasError('maxlength')">
               Password cannot be longer than 50 characters
             </mat-error>
           </mat-form-field>
