--- a/src/app/user/profile/profile.component.html
+++ b/src/app/user/profile/profile.component.html
@@ -19,39 +19,22 @@
               <mat-form-field appearance="outline" fxFlex="40%">
                 <mat-label>First Name</mat-label>
                 <input matInput aria-label="First Name" formControlName="first" />
-                <mat-error
-                  *ngIf="formGroup.get('name').get('first').hasError('required')">
-                  First Name is required
-                </mat-error>
-                <mat-error
-                  *ngIf="formGroup.get('name').get('first').hasError('minLength')">
-                  Must be at least 2 characters
-                </mat-error>
-                <mat-error
-                  *ngIf="formGroup.get('name').get('first').hasError('maxLength')">
-                  Can't exceed 50 characters
+                <mat-error [appFormError]="['required', 'minlength', 'maxlength']"
+                  fieldLabel="First name" [fieldControl]="formGroup.get('name.first')">
                 </mat-error>
               </mat-form-field>
-              <mat-form-field appearance="outline" fxFlex="20%">
+              <mat-form-field appearance=" outline" fxFlex="20%">
                 <mat-label>MI</mat-label>
                 <input matInput aria-label="Middle Initial" formControlName="middle" />
-                <mat-error *ngIf="formGroup.get('name').get('middle').invalid">
-                  Only inital
+                <mat-error [appFormError]="[{error: 'invalid', message: 'Only initial'}]"
+                  [fieldControl]="formGroup.get('name.middle')">
                 </mat-error>
               </mat-form-field>
               <mat-form-field appearance="outline" fxFlex="40%">
                 <mat-label>Last Name</mat-label>
                 <input matInput aria-label="Last Name" formControlName="last" />
-                <mat-error *ngIf="formGroup.get('name').get('last').hasError('required')">
-                  Last Name is required
-                </mat-error>
-                <mat-error
-                  *ngIf="formGroup.get('name').get('last').hasError('minLength')">
-                  Must be at least 2 characters
-                </mat-error>
-                <mat-error
-                  *ngIf="formGroup.get('name').get('last').hasError('maxLength')">
-                  Can't exceed 50 characters
+                <mat-error [appFormError]="['required', 'minlength', 'maxlength']"
+                  fieldLabel="Last name" [fieldControl]="formGroup.get('name.last')">
                 </mat-error>
               </mat-form-field>
             </div>
@@ -61,22 +44,22 @@
               <mat-label>Date of Birth</mat-label>
               <input matInput aria-label="Date of Birth" formControlName="dateOfBirth"
                 [matDatepicker]="dateOfBirthPicker" />
-              <mat-hint *ngIf="formGroup.get('dateOfBirth').touched">
+              <mat-hint *ngIf="formGroup.get('dateOfBirth')?.touched">
                 {{ this.age }} year(s) old
               </mat-hint>
               <mat-datepicker-toggle matSuffix [for]="dateOfBirthPicker">
               </mat-datepicker-toggle>
               <mat-datepicker #dateOfBirthPicker></mat-datepicker>
-              <mat-error *ngIf="formGroup.get('dateOfBirth').invalid">
-                Date must be with the last 100 years
+              <mat-error *ngIf="formGroup.get('dateOfBirth')?.invalid">
+                Date must be within the last 100 years
               </mat-error>
             </mat-form-field>
             <mat-form-field appearance="outline" fxFlex="50%">
               <mat-label>E-mail</mat-label>
               <input matInput aria-label="E-mail" formControlName="email" />
               <mat-hint>Only your manager can update your e-mail.</mat-hint>
-              <mat-error *ngIf="formGroup.get('email').invalid">
-                A valid E-mail is required
+              <mat-error [appFormError]="['invalid']" fieldLabel="E-mail"
+                [fieldControl]="formGroup.get('email')">
               </mat-error>
             </mat-form-field>
           </div>
@@ -129,17 +112,8 @@
             <mat-form-field appearance="outline" fxFlex>
               <mat-label>Address Line 1</mat-label>
               <input matInput aria-label="Address Line 1" formControlName="line1" />
-              <mat-error
-                *ngIf=" formGroup.get('address').get('line1').hasError('required')">
-                Line 1 is required
-              </mat-error>
-              <mat-error
-                *ngIf="formGroup.get('address').get('line1').hasError('minLength')">
-                Must be at least 2 characters
-              </mat-error>
-              <mat-error
-                *ngIf="formGroup.get('address').get('line1').hasError('maxLength')">
-                Can't exceed 50 characters
+              <mat-error [appFormError]="['required', 'minlength', 'maxlength']"
+                fieldLabel="Line 1" [fieldControl]="formGroup.get('address.line1')">
               </mat-error>
             </mat-form-field>
           </div>
@@ -149,13 +123,8 @@
               <mat-label>Line 2</mat-label>
               <input matInput aria-label="Address Line 2" formControlName="line2" />
               <mat-hint>Optional</mat-hint>
-              <mat-error
-                *ngIf="formGroup.get('address').get('line2').hasError('minLength')">
-                Must be at least 2 characters
-              </mat-error>
-              <mat-error
-                *ngIf="formGroup.get('address').get('line2').hasError('maxLength')">
-                Can't exceed 50 characters
+              <mat-error [appFormError]="['minlength', 'maxlength']" fieldLabel="Line 2"
+                [fieldControl]="formGroup.get('address.line2')">
               </mat-error>
             </mat-form-field>
           </div>
@@ -164,17 +133,8 @@
             <mat-form-field appearance="outline" fxFlex="40%">
               <mat-label>City</mat-label>
               <input matInput aria-label="City" formControlName="city" />
-              <mat-error
-                *ngIf="formGroup.get('address').get('city').hasError('required')">
-                City is required
-              </mat-error>
-              <mat-error
-                *ngIf="formGroup.get('address').get('city').hasError('minLength')">
-                Must be at least 2 characters
-              </mat-error>
-              <mat-error
-                *ngIf="formGroup.get('address').get('city').hasError('maxLength')">
-                Can't exceed 50 characters
+              <mat-error [appFormError]="['required', 'minlength', 'maxlength']"
+                fieldLabel="City" [fieldControl]="formGroup.get('address.city')">
               </mat-error>
             </mat-form-field>
             <mat-form-field appearance="outline" fxFlex="30%">
@@ -186,16 +146,15 @@
                   {{ state.name }}
                 </mat-option>
               </mat-autocomplete>
-              <mat-error
-                *ngIf="formGroup.get('address').get('state').hasError('required')">
-                State is required
+              <mat-error [appFormError]="['required']" fieldLabel="State"
+                [fieldControl]="formGroup.get('address.state')">
               </mat-error>
             </mat-form-field>
             <mat-form-field appearance="outline" fxFlex="30%">
               <mat-label>Zip Code</mat-label>
               <input matInput aria-label="Zip Code" formControlName="zip" />
-              <mat-error *ngIf="formGroup.get('address').get('zip').invalid">
-                A valid Zip Code is required
+              <mat-error [appFormError]="['invalid']" fieldLabel="Zip code"
+                [fieldControl]="formGroup.get('address.zip')">
               </mat-error>
             </mat-form-field>
           </div>
